<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_medium_2">

    <com.padcmyanmar.padcx.fooddeliveryassignment.views.components.RoundedCornerImageView
        android:id="@+id/ivRestaurant"
        android:layout_width="350dp"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:src="@drawable/intro"
        app:cornerRadius="@dimen/margin_medium" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivRestaurant"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/item_name"
        style="@style/BlackText"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvName"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/restaurant_name" />

    <TextView
        android:id="@+id/tvRatings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tvType"
        android:layout_marginStart="@dimen/margin_card_medium_2"
        android:layout_toRightOf="@id/tvType"
        android:drawableLeft="@drawable/ic_baseline_star_24"
        android:text="@string/ratings" />

</RelativeLayout>