<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rlRestaurant"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margin_medium_2">

    <com.padcmyanmar.padcx.fooddeliveryassignment.views.components.RoundedCornerImageView
        android:id="@+id/ivRestaurant"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cornerRadius="10dp"
        android:src="@drawable/ic_launcher_background"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        style="@style/BlackText"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_toRightOf="@id/ivRestaurant"/>

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_card_medium_2"
        android:layout_alignStart="@id/tvName"
        android:layout_below="@id/tvName"
        android:text="@string/restaurant_name"/>

    <TextView
        android:id="@+id/tvRatings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_card_medium_2"
        android:layout_alignStart="@id/tvType"
        android:layout_below="@id/tvType"
        android:drawableStart="@drawable/ic_baseline_star_24"
        android:text="@string/ratings"/>

</RelativeLayout>