<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/tvCreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CoralText"
        android:layout_margin="@dimen/margin_medium_2"
        android:text="@string/create_your_acc"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCreateAcc"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_alignStart="@id/tvCreateAcc"
        android:hint="Username"
        android:inputType="textPersonName"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etName"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_alignStart="@id/tvCreateAcc"
        android:hint="Email"
        android:inputType="textPersonName"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_alignStart="@id/tvCreateAcc"
        android:hint="Password"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_alignStart="@id/tvCreateAcc"
        android:hint="Phone"
        android:inputType="phone"/>

    <TextView
        android:id="@+id/btnCreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/login"
        style="@style/WhiteText"
        android:background="@drawable/bg_rounded_coral"
        android:paddingStart="@dimen/login_padding"
        android:paddingEnd="@dimen/login_padding"
        android:paddingTop="@dimen/margin_card_medium_2"
        android:paddingBottom="@dimen/margin_card_medium_2"
        android:layout_below="@id/etPhone"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_condition"
        style="@style/BlackText"
        android:layout_below="@id/btnCreateAcc"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_account"
        style="@style/BlackText"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>