<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.RestaurantDetailsActivity">

     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:background="@color/colorWhite"
         android:fitsSystemWindows="true">

         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorWhite"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/toolbar">

             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax"
                 app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

                 <ImageView
                     android:id="@+id/ivItem"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
                     android:src="@drawable/success" />

                 <com.google.android.material.chip.Chip
                     android:id="@+id/detail_category_type"
                     style="@style/BlackText"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="10dp"
                     android:padding="3dp"
                     android:paddingLeft="@dimen/margin_large"
                     android:paddingEnd="@dimen/margin_large"
                     android:text="20 -30 mins"
                     app:chipBackgroundColor="@color/colorGray"
                     app:rippleColor="@color/colorWhite" />

             </RelativeLayout>

             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
                 app:layout_scrollFlags="scroll|enterAlways"
                 app:navigationIcon="@drawable/ic_baseline_arrow_back_black_ios_24" />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>

     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg_rounded_white"
         app:behavior_overlapTop="50dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/margin_medium_2">

             <TextView
                 android:id="@+id/tvRestaurantTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_medium_2"
                 android:layout_marginTop="@dimen/margin_medium_2"
                 android:text="@string/item_name"
                 android:textColor="@color/text_color_pink"
                 android:textSize="@dimen/text_heading_1x"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintWidth_percent="0.5" />

             <TextView
                 android:id="@+id/tvType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tvRestaurantTitle"
                 android:layout_marginStart="@dimen/margin_medium_2"
                 android:layout_marginTop="@dimen/margin_small"
                 android:text="@string/western_food" />

             <TextView
                 android:id="@+id/tvAddress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tvType"
                 android:layout_marginStart="@dimen/margin_medium_2"
                 android:layout_marginTop="@dimen/margin_small"
                 android:text="@string/rock_street" />

             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@id/tvRestaurantTitle"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="@dimen/margin_medium_2"
                 android:src="@drawable/ic_baseline_favorite_border_24" />

             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@id/tvAddress"
                 android:layout_marginTop="@dimen/margin_medium_2"
                 android:background="@drawable/corner_rounded_gray"
                 app:layout_constraintBottom_toBottomOf="parent">

                 <TextView
                     android:id="@+id/tvPopularChoice"
                     style="@style/BlackText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/margin_medium_2"
                     android:text="@string/popular_choices"
                     android:textStyle="bold" />

                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvBurgers"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tvPopularChoice" />

                 <TextView
                     android:id="@+id/tvBurgers"
                     style="@style/BlackText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/rvBurgers"
                     android:layout_margin="@dimen/margin_medium_2"
                     android:text="Burgers"
                     android:textStyle="bold" />

                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvBurgerList"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_below="@id/tvBurgers"
                     tools:listitem="@layout/item_popular_choices" />

             </RelativeLayout>

         </RelativeLayout>

     </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btnAddTocart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/margin_medium"
        android:backgroundTint="@color/text_color_pink"
        android:text="Go To Cart"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>